add figma logo png

--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
           <div id="logo" class="h-full">
             <img
               class="h-full bg-cover transition-transform duration-300 hover:scale-105"
-              src="/Figma_project/assets/figma-logo-removebg-preview.png"
+              src="./assets/figma-logo.png"
               alt="logo"
             />
           </div>
