--- a/index.html
+++ b/index.html
@@ -109,71 +109,34 @@
         <!-- Theme Toggle -->
         <div
           id="themeBtn"
-          class="relative flex items-center justify-center w-32 h-12 bg-gray-200/50 backdrop-blur-sm rounded-full cursor-pointer transition-all duration-300"
+          class="relative flex items-center justify-center w-32 h-12 bg-gray-200/50 rounded-full cursor-pointer"
         >
           <span
             id="toggleSlider"
-            class="absolute w-10 h-10 bg-white rounded-full shadow-md left-1 top-1 transition-all duration-500 ease-in-out"
+            class="absolute w-10 h-10 bg-white rounded-full shadow-md left-1 top-1 transition-all duration-500"
           ></span>
 
-          <i
-            class="fa-solid fa-sun text-yellow-400 absolute left-4 top-1/2 -translate-y-1/2 transition-all duration-500 ease-in-out"
-          ></i>
-          <i
-            class="fa-solid fa-moon text-gray-600 absolute right-4 top-1/2 -translate-y-1/2 transition-all duration-500 ease-in-out"
-          ></i>
+          <i class="fa-solid fa-sun text-yellow-400 absolute left-4"></i>
+          <i class="fa-solid fa-moon text-gray-600 absolute right-4"></i>
         </div>
 
-        <!-- Nav Links -->
+        <!-- Links -->
         <ul class="flex flex-col gap-4">
-          <li>
-            <a
-              href="#"
-              class="block p-3 rounded-lg font-medium text-gray-700 text-shadow-white hover:bg-gray-200/50 hover:translate-x-2 transition-all duration-300"
-              >Products</a
-            >
-          </li>
-          <li>
-            <a
-              href="#"
-              class="block p-3 rounded-lg font-medium text-gray-700 text-shadow-white hover:bg-gray-200/50 hover:translate-x-2 transition-all duration-300"
-              >Solutions</a
-            >
-          </li>
-          <li>
-            <a
-              href="#"
-              class="block p-3 rounded-lg font-medium text-gray-700 text-shadow-white hover:bg-gray-200/50 hover:translate-x-2 transition-all duration-300"
-              >Community</a
-            >
-          </li>
-          <li>
-            <a
-              href="#"
-              class="block p-3 rounded-lg font-medium text-gray-700 text-shadow-white hover:bg-gray-200/50 hover:translate-x-2 transition-all duration-300"
-              >Resources</a
-            >
-          </li>
-
-          <li>
-            <a
-              href="#"
-              class="block p-3 rounded-lg font-medium text-gray-700 text-shadow-white hover:bg-gray-200/50 hover:translate-x-2 transition-all duration-300"
-              >Pricing</a
-            >
-          </li>
+          <li><a class="navLinks block p-3">Products</a></li>
+          <li><a class="navLinks block p-3">Solutions</a></li>
+          <li><a class="navLinks block p-3">Community</a></li>
+          <li><a class="navLinks block p-3">Resources</a></li>
+          <li><a class="navLinks block p-3">Pricing</a></li>
         </ul>
 
         <div class="flex-1"></div>
 
-        <!-- Logout Button -->
+        <!-- Logout -->
         <button
           id="logoutBtn"
-          class="w-full flex items-center justify-center gap-2 py-3 bg-[#d62828] text-white font-medium rounded-lg shadow-md hover:bg-[#bf0603] hover:scale-105 transition-all duration-300 cursor-pointer active:scale-95"
+          class="w-full py-3 bg-[#d62828] text-white rounded-lg hover:scale-105 transition"
         >
-          <i
-            class="fa-solid fa-right-from-bracket animate-pulse hover:translate-x-1 transition-all duration-300"
-          ></i>
+          <i class="fa-solid fa-right-from-bracket"></i>
           Log Out
         </button>
       </div>
@@ -892,6 +855,10 @@
         &copy; 2026 BrandName. All rights reserved.
       </div>
     </footer>
+
+    <!-- custom cursor  -->
+    <div id="cursor"></div>
+
 
     <script src="figma.js"></script>
   </body>
