add style for btn

--- a/index.html
+++ b/index.html
@@ -68,7 +68,7 @@
 
           <!-- Get started for free button -->
           <button
-            class="group relative px-6 py-2.5 text-[18px] bg-black text-white font-medium rounded-md flex items-center justify-center overflow-hidden"
+            class="bg-primary group relative px-6 py-2.5 text-[18px] bg-black text-white font-medium rounded-md flex items-center justify-center overflow-hidden"
           >
             <span class="flex items-center">
               <span
@@ -657,7 +657,7 @@
         srcset=""
       />
       <button
-        class="group absolute top-1/2 left-1/2 -translate-x-1/2 -translate-y-1/2 px-10 py-5 text-4xl bg-black text-white font-medium rounded-2xl flex items-center justify-center overflow-hidden cursor-pointer transition-all duration-500 hover:scale-105 active:scale-95"
+        class="bg-primary group absolute top-1/2 left-1/2 -translate-x-1/2 -translate-y-1/2 px-10 py-5 text-4xl bg-black text-white font-medium rounded-2xl flex items-center justify-center overflow-hidden cursor-pointer transition-all duration-500 hover:scale-105 active:scale-95"
       >
         <!-- SHINE EFFECT -->
         <span
@@ -667,7 +667,7 @@
         <!-- CONTENT -->
         <span class="relative z-10 flex items-center">
           <span
-            class="transition-all duration-500 ease-in-out pl-4 group-hover:mr-5"
+            class=" transition-all duration-500 ease-in-out pl-4 group-hover:mr-5"
           >
             Get started for free
           </span>
